--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 
   "icons": { "16": "img/vs16.png", "48": "img/vs48.png", "128": "img/vs128.png" },
 
-  "permissions": [ "storage", "*://vacstat.us/*", "*://steamcommunity.com/*" ],
+  "permissions": [ "storage", "notifications", "*://vacstat.us/*", "*://steamcommunity.com/*" ],
 
   "content_scripts" : [{
     "js": [ "js/addtovac.js" ],
@@ -22,5 +22,7 @@
 
     "default_title": "VacStatus",
     "default_popup": "popup.html"
-  }
+  },
+
+  "web_accessible_resources": [ "img/vs48.png" ]
 }
