disabled in-web adding for now

--- a/manifest.json
+++ b/manifest.json
@@ -8,11 +8,11 @@
 
   "permissions": [ "storage", "notifications", "*://vacstat.us/*", "*://steamcommunity.com/*" ],
 
-  "content_scripts" : [{
-    "js": [ "js/addtovac.js" ],
-    "run_at": "document_end",
-    "matches": [ "*://steamcommunity.com/id/*/friends/coplay/*" ]
-  }],
+  // "content_scripts" : [{
+  //   "js": [ "js/addtovac.js" ],
+  //   "run_at": "document_end",
+  //   "matches": [ "*://steamcommunity.com/id/*/friends/coplay/*" ]
+  // }],
 
   "browser_action": {
     "default_icon": {
