--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version" : 2,
   "name": "VacStatus-Chrome",
-  "description": "Add player to your VacStat.us list with one click!",
+  "description": "Quickly add players from your previously played games!",
   "version": "0.0.1",
 
   "icons": { "16": "img/vs16.png", "48": "img/vs48.png", "128": "img/vs128.png" },
